[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yzu-wlan"
version = "0.1.0"
description = "扬州大学校园网自动登录工具"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
yzu-wlan = "yzu_wlan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
